force-app/main/default/objects/FSM_StatusColorCode__mdt/FSM_StatusColorCode__mdt.object-meta.xml
<CustomObject>
    <description>Custom Meta Data table to hold the color code against each status. SFS-197</description>
    <label>FSM Status Color Code</label>
    <pluralLabel>FSM Status Color Codes</pluralLabel>
</CustomObject>