force-app/main/default/objects/FSM_StatusColorCode__mdt/fields/FSM_ColorCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ColorCode__c</fullName>
    <description>SFS-197 (In Hex, not RGB)</description>
    <inlineHelpText>Color Code (HEX), not RGB.</inlineHelpText>
    <label>Color Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>