force-app/main/default/objects/FSM_StatusColorCode__mdt/fields/FSM_IsBundle__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-8499</description>
    <label>FSM_IsBundle</label>
    <type>Checkbox</type>
</CustomField>